@startuml
class com.sagarkhurana.quizforfun.EditPasswordActivity {
- EditText etOldPassword
# void onCreate(Bundle)
- void changePassword(String,String)
- boolean validateInput(String,String,String)
}
class com.sagarkhurana.quizforfun.EditPasswordActivity$UpdatePasswordTask {
- User user
# Void doInBackground(Void)
# void onPostExecute(Void)
}
class com.sagarkhurana.quizforfun.HistoryActivity {
- RecyclerView rvHistory
- List<UserWithAttempts> userWithAttempts
- TextView tvTotalPoints
# void onCreate(Bundle)
}
class com.sagarkhurana.quizforfun.HistoryActivity$GetAllUserAttemptTask {
- String email
~ ArrayList<Attempt> attempts
# Void doInBackground(Void)
# void onPostExecute(Void)
}
class com.sagarkhurana.quizforfun.HistoryActivity$AttemptCreatedTimeComparator {
+ int compare(Attempt,Attempt)
}
class com.sagarkhurana.quizforfun.LoginActivity {
- EditText etUsername
# void onStart()
# void onCreate(Bundle)
- boolean validaInputs(String,String)
}
class com.sagarkhurana.quizforfun.LoginActivity$LoginUserTask {
- String username
- String password
- ArrayList<User> users
# Void doInBackground(Void)
# void onPostExecute(Void)
}
class com.sagarkhurana.quizforfun.RegisterActivity {
# void onCreate(Bundle)
- boolean validateInputs(String,String,String)
}
class com.sagarkhurana.quizforfun.RegisterActivity$RegisterUserTask {
- String username
- String email
- String password
- User user
- boolean isOkay
# Void doInBackground(Void)
# void onPostExecute(Void)
}
class com.sagarkhurana.quizforfun.RuleActivity {
+ {static} ViewPager viewPager
~ RulesViewPagerAdapter adapter
# void onCreate(Bundle)
}
class com.sagarkhurana.quizforfun.MathQuizActivity {
- int currentQuestionIndex
- TextView tvQuestion
- Button btnNext
- List<String> questions
- int correctQuestion
- EditText etAnswer
- HashMap<String,String> questionsAnswerMap
# void onCreate(Bundle)
- void displayNextQuestions()
- void displayData()
}
class com.sagarkhurana.quizforfun.GeographyOrLiteratureQuizActivity {
- int currentQuestionIndex
- TextView tvQuestion
- Button btnNext
- RadioGroup radioGroup
- RadioButton radioButton1
- List<String> questions
- int correctQuestion
- Map<String,Map<String,Boolean>> questionsAnswerMap
# void onCreate(Bundle)
- void displayNextQuestions()
- void displayData()
- void setAnswersToRadioButton()
}
class com.sagarkhurana.quizforfun.QuizOptionActivity {
# void onCreate(Bundle)
}
class com.sagarkhurana.quizforfun.FinalResultActivity {
- TextView tvSubject
# void onCreate(Bundle)
+ void onBackPressed()
- void getOverAllPoints(Attempt)
- void displayData(Attempt)
}
class com.sagarkhurana.quizforfun.FinalResultActivity$GetOverallPointsTask {
- Attempt attempt
- int overallPoints
# Void doInBackground(Void)
# void onPostExecute(Void)
}
class com.sagarkhurana.quizforfun.FinalResultActivity$SaveUserAttemptTask {
- Attempt attempt
# Void doInBackground(Void)
# void onPostExecute(Void)
}
class com.sagarkhurana.quizforfun.MainActivity {
# void onCreate(Bundle)
}


androidx.appcompat.app.AppCompatActivity <|-- com.sagarkhurana.quizforfun.EditPasswordActivity
com.sagarkhurana.quizforfun.EditPasswordActivity +.. com.sagarkhurana.quizforfun.EditPasswordActivity$UpdatePasswordTask
com.sagarkhurana.quizforfun.AsyncTask <|-- com.sagarkhurana.quizforfun.EditPasswordActivity$UpdatePasswordTask
androidx.appcompat.app.AppCompatActivity <|-- com.sagarkhurana.quizforfun.HistoryActivity
com.sagarkhurana.quizforfun.HistoryActivity +.. com.sagarkhurana.quizforfun.HistoryActivity$GetAllUserAttemptTask
com.sagarkhurana.quizforfun.AsyncTask <|-- com.sagarkhurana.quizforfun.HistoryActivity$GetAllUserAttemptTask
com.sagarkhurana.quizforfun.HistoryActivity +.. com.sagarkhurana.quizforfun.HistoryActivity$AttemptCreatedTimeComparator
com.sagarkhurana.quizforfun.Comparator <|.. com.sagarkhurana.quizforfun.HistoryActivity$AttemptCreatedTimeComparator
androidx.appcompat.app.AppCompatActivity <|-- com.sagarkhurana.quizforfun.LoginActivity
com.sagarkhurana.quizforfun.LoginActivity +.. com.sagarkhurana.quizforfun.LoginActivity$LoginUserTask
com.sagarkhurana.quizforfun.AsyncTask <|-- com.sagarkhurana.quizforfun.LoginActivity$LoginUserTask
androidx.appcompat.app.AppCompatActivity <|-- com.sagarkhurana.quizforfun.RegisterActivity
com.sagarkhurana.quizforfun.RegisterActivity +.. com.sagarkhurana.quizforfun.RegisterActivity$RegisterUserTask
com.sagarkhurana.quizforfun.AsyncTask <|-- com.sagarkhurana.quizforfun.RegisterActivity$RegisterUserTask
androidx.appcompat.app.AppCompatActivity <|-- com.sagarkhurana.quizforfun.RuleActivity
androidx.appcompat.app.AppCompatActivity <|-- com.sagarkhurana.quizforfun.MathQuizActivity
androidx.appcompat.app.AppCompatActivity <|-- com.sagarkhurana.quizforfun.GeographyOrLiteratureQuizActivity
androidx.appcompat.app.AppCompatActivity <|-- com.sagarkhurana.quizforfun.QuizOptionActivity
androidx.appcompat.app.AppCompatActivity <|-- com.sagarkhurana.quizforfun.FinalResultActivity
com.sagarkhurana.quizforfun.FinalResultActivity +.. com.sagarkhurana.quizforfun.FinalResultActivity$GetOverallPointsTask
com.sagarkhurana.quizforfun.AsyncTask <|-- com.sagarkhurana.quizforfun.FinalResultActivity$GetOverallPointsTask
com.sagarkhurana.quizforfun.FinalResultActivity +.. com.sagarkhurana.quizforfun.FinalResultActivity$SaveUserAttemptTask
com.sagarkhurana.quizforfun.AsyncTask <|-- com.sagarkhurana.quizforfun.FinalResultActivity$SaveUserAttemptTask
androidx.appcompat.app.AppCompatActivity <|-- com.sagarkhurana.quizforfun.MainActivity
@enduml